--- a/index.html
+++ b/index.html
@@ -12,6 +12,14 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css"
         integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <style>
+        svg {
+            color: #03dac6 !important
+        }
+
+        svg.hover {
+            color: #131414 !important
+        }
+
         .primary-colour {
             color: #BB86FC !important
         }
@@ -42,7 +50,7 @@
             position: fixed;
             top: 50%;
             left: 50%;
-            transform: translate(-50%, -150%);
+            transform: translate(-50%, -50%);
         }
     </style>
 </head>
@@ -72,7 +80,40 @@
 
         </div>
         <div class="container text-center centered primary-colour">
-            hey.
+            <span style="font-weight:500;font-size:xx-large">hey.</span>
+            <div class="container-sm mt-5">
+                <div class="row px-5">
+                    <div class="col-5"></div>
+                    <div class="col-md-auto"><a href="https://github.com/alxxw" target="_blank" rel="noopener"
+                            title="Github"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24"
+                                viewBox="0 0 24 24" fill="none" stroke="currentcolor" stroke-width="1.5"
+                                stroke-linecap="round" stroke-linejoin="round">
+                                <path
+                                    d="M9 19c-5 1.5-5-2.5-7-3m14 6v-3.87a3.37 3.37.0 00-.94-2.61c3.14-.35 6.44-1.54 6.44-7A5.44 5.44.0 0020 4.77 5.07 5.07.0 0019.91 1S18.73.65 16 2.48a13.38 13.38.0 00-7 0C6.27.65 5.09 1 5.09 1A5.07 5.07.0 005 4.77 5.44 5.44.0 003.5 8.55c0 5.42 3.3 6.61 6.44 7A3.37 3.37.0 009 18.13V22">
+                                </path>
+                            </svg></a></div>
+                    <div class="col-md-auto ml-1"><a href="https://twitter.com/alxwu_" target="_blank" rel="noopener"
+                            title="Twitter"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24"
+                                viewBox="0 0 260 220" fill="none" stroke="currentcolor" stroke-width="10"
+                                stroke-linecap="round" stroke-linejoin="round">
+                                <title>Twitter</title>
+                                <path fill="inherit"
+                                    d="M5 187c100 62 227-7 225-130 10-7 19-16 26-27-10 5-20 8-31 9 11.4-7 20-17 24-29-10 6-20 10-33 13-43-41.3-100 3-88 47-43-2-80-23-106-54C10 40 15 71 39 85 30 84 20 82 15 78c0 26 18 46 41 51-8 2-15 3-23 1 6 20 26 36 48 36-20 16-47 24-76 21z" />
+                            </svg></a></div>
+                    <div class="col-md-auto"><a href="https://www.linkedin.com/in/yuxuan-wu-6748aa210/" target="_blank"
+                            rel="noopener" title="LinkedIn"><svg viewBox="0 30 512 512"
+                                xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none"
+                                stroke="currentcolor" stroke-width="15" stroke-linecap="round" stroke-linejoin="round">
+                                <path d="M150.65,100.682c0,27.992-22.508,50.683-50.273,50.683c-27.765,0-50.273-22.691-50.273-50.683
+                        C50.104,72.691,72.612,50,100.377,50C128.143,50,150.65,72.691,150.65,100.682z M143.294,187.333H58.277V462h85.017V187.333z
+                        M279.195,187.333h-81.541V462h81.541c0,0,0-101.877,0-144.181c0-38.624,17.779-61.615,51.807-61.615
+                        c31.268,0,46.289,22.071,46.289,61.615c0,39.545,0,144.181,0,144.181h84.605c0,0,0-100.344,0-173.915
+                        s-41.689-109.131-99.934-109.131s-82.768,45.369-82.768,45.369V187.333z" />
+                            </svg></a></div>
+                    <div class="col-5"></div>
+                </div>
+            </div>
+
         </div>
     </section>
 
