--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="/favicon.ico" />
+    <link rel="icon" href="dp.gif" />
     <meta name="viewport" content="width=device-width,initial-scale=1" />
     <meta name="theme-color" content="#a1a0a0" />
     <meta name="description" content="Alex Wu Portfolio" />
@@ -11,57 +11,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css"
         integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-    <style>
-        svg {
-            color: #03dac6 !important
-        }
-
-        svg.hover {
-            color: #131414 !important
-        }
-
-        .primary-colour {
-            color: #BB86FC !important
-        }
-
-        .nav-item:hover {
-            color: #cfabfa !important
-        }
-
-        .primary-variant {
-            color: #3700B3
-        }
-
-        .secondary-color {
-            color: #03dac6;
-        }
-
-        .background-color {
-            color: #121212
-        }
-
-        .landing-page {
-            background-color: #121212;
-            height: 100vh;
-            font-family: Helvetica Neue, Helvetica, Arial, sans-serif
-        }
-
-        .centered {
-            position: fixed;
-            top: 50%;
-            left: 50%;
-            transform: translate(-50%, -50%);
-        }
-    </style>
+    <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
     <section class="landing-page">
         <div class="container-fluid">
             <nav class="p-4 navbar-expand-lg navbar navbar-dark">
-                <a class="navbar-brand" href="#">
-                    <img src="https://lh3.googleusercontent.com/_ywppJTMLJUzuDCEAIX2kWBAN9FAvAyzKIOwJWzRXhLfWeY7rj8KIA_0YR6Gg48EWN_JpnP58N05fy0vzvGW_dpuh9_xePi2MSOlqw=w600"
-                        width="105" height="105" class="d-inline-block align-top ml-3 rounded" alt="pfp">
+                <a class="navbar-brand pr-3" href="index.html">
+                    <img src="dp.gif" width="80" height="80" class="d-inline-block align-top ml-3 rounded" alt="pfp">
                 </a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
                     aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
@@ -69,7 +27,7 @@
                 </button>
                 <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                     <div class="navbar-nav">
-                        <a class="nav-item nav-link px-5 h5 primary-colour" href="#">about()</a>
+                        <a class="nav-item nav-link px-5 h5 primary-colour" href="about.html">about()</a>
                         <a class="nav-item nav-link px-5 h5 primary-colour" href="#">projects()</a>
                         <a class="nav-item nav-link px-5 h5 primary-colour" href="#">contact()</a>
                         <a class="nav-item nav-link px-5 h5 primary-colour" href="#">resume()</a>
@@ -80,7 +38,7 @@
 
         </div>
         <div class="container text-center centered primary-colour">
-            <span style="font-weight:500;font-size:xx-large">hey.</span>
+            <span class="gm-text">gm.</span>
             <div class="container-sm mt-5">
                 <div class="row px-5">
                     <div class="col-5"></div>
@@ -103,7 +61,7 @@
                     <div class="col-md-auto"><a href="https://www.linkedin.com/in/yuxuan-wu-6748aa210/" target="_blank"
                             rel="noopener" title="LinkedIn"><svg viewBox="0 30 512 512"
                                 xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none"
-                                stroke="currentcolor" stroke-width="15" stroke-linecap="round" stroke-linejoin="round">
+                                stroke="currentcolor" stroke-width="17" stroke-linecap="round" stroke-linejoin="round">
                                 <path d="M150.65,100.682c0,27.992-22.508,50.683-50.273,50.683c-27.765,0-50.273-22.691-50.273-50.683
                         C50.104,72.691,72.612,50,100.377,50C128.143,50,150.65,72.691,150.65,100.682z M143.294,187.333H58.277V462h85.017V187.333z
                         M279.195,187.333h-81.541V462h81.541c0,0,0-101.877,0-144.181c0-38.624,17.779-61.615,51.807-61.615
@@ -115,6 +73,9 @@
             </div>
 
         </div>
+        <p class="secondary-color nametag">
+            alxw
+        </p>
     </section>
 
 </body>
