added some sub webpages

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                     <div class="navbar-nav">
                         <a class="nav-item nav-link px-5 h5 primary-colour" href="about.html">about()</a>
                         <a class="nav-item nav-link px-5 h5 primary-colour" href="#">projects()</a>
-                        <a class="nav-item nav-link px-5 h5 primary-colour" href="#">contact()</a>
+                        <a class="nav-item nav-link px-5 h5 primary-colour" href="contact.html">contact()</a>
                         <a class="nav-item nav-link px-5 h5 primary-colour" href="#">resume()</a>
                     </div>
                 </div>
