--- a/contact.html
+++ b/contact.html
@@ -8,7 +8,7 @@
     <meta name="viewport" content="width=device-width,initial-scale=1" />
     <meta name="theme-color" content="#a1a0a0" />
     <meta name="description" content="Alex Wu Portfolio" />
-    <title>about</title>
+    <title>contact</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css"
         integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
@@ -16,7 +16,7 @@
 </head>
 
 <body>
-    <section class="about-page">
+    <section class="contact-page">
         <div class="container-fluid">
             <nav class="p-4 navbar-expand-lg navbar navbar-dark">
                 <a class="navbar-brand pr-3" href="index.html">
