about copywriting done

--- a/about.html
+++ b/about.html
@@ -1,56 +1,91 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-
-<head>
+  <head>
     <meta charset="utf-8" />
-    <link rel="icon"
-        href="https://lh3.googleusercontent.com/_ywppJTMLJUzuDCEAIX2kWBAN9FAvAyzKIOwJWzRXhLfWeY7rj8KIA_0YR6Gg48EWN_JpnP58N05fy0vzvGW_dpuh9_xePi2MSOlqw=w600" />
+    <link
+      rel="icon"
+      href="https://lh3.googleusercontent.com/_ywppJTMLJUzuDCEAIX2kWBAN9FAvAyzKIOwJWzRXhLfWeY7rj8KIA_0YR6Gg48EWN_JpnP58N05fy0vzvGW_dpuh9_xePi2MSOlqw=w600"
+    />
     <meta name="viewport" content="width=device-width,initial-scale=1" />
     <meta name="theme-color" content="#a1a0a0" />
     <meta name="description" content="Alex Wu Portfolio" />
     <title>about</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css"
-        integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-    <link rel="stylesheet" href="styles.css">
-</head>
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, shrink-to-fit=no"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css"
+      integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
+      crossorigin="anonymous"
+    />
+    <link rel="stylesheet" href="styles.css" />
+  </head>
 
-<body>
+  <body>
     <section class="about-page">
-        <div class="container-fluid">
-            <nav class="p-4 navbar-expand-lg navbar navbar-dark">
-                <a class="navbar-brand pr-3" href="index.html">
-                    <img src="https://lh3.googleusercontent.com/_ywppJTMLJUzuDCEAIX2kWBAN9FAvAyzKIOwJWzRXhLfWeY7rj8KIA_0YR6Gg48EWN_JpnP58N05fy0vzvGW_dpuh9_xePi2MSOlqw=w600"
-                        width="80" height="80" class="d-inline-block align-top ml-3 rounded" alt="pfp">
-                </a>
-                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
-                    aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-                    <div class="navbar-nav">
-                        <a class="nav-item nav-link px-5 h5 primary-colour" href="about.html">about()</a>
-                        <a class="nav-item nav-link px-5 h5 primary-colour" href="projects.html">projects()</a>
-                        <a class="nav-item nav-link px-5 h5 primary-colour" href="contact.html">contact()</a>
-                        <a class="nav-item nav-link px-5 h5 primary-colour" href="#">resume()</a>
-                    </div>
-                </div>
-
-            </nav>
-
+      <div class="container-fluid">
+        <nav class="p-4 navbar-expand-lg navbar navbar-dark">
+          <a class="navbar-brand pr-3" href="index.html">
+            <img
+              src="https://lh3.googleusercontent.com/_ywppJTMLJUzuDCEAIX2kWBAN9FAvAyzKIOwJWzRXhLfWeY7rj8KIA_0YR6Gg48EWN_JpnP58N05fy0vzvGW_dpuh9_xePi2MSOlqw=w600"
+              width="80"
+              height="80"
+              class="d-inline-block align-top ml-3 rounded"
+              alt="pfp"
+            />
+          </a>
+          <button
+            class="navbar-toggler"
+            type="button"
+            data-toggle="collapse"
+            data-target="#navbarNavAltMarkup"
+            aria-controls="navbarNavAltMarkup"
+            aria-expanded="false"
+            aria-label="Toggle navigation"
+          >
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+            <div class="navbar-nav">
+              <a
+                class="nav-item nav-link px-5 h5 primary-colour"
+                href="about.html"
+                >about()</a
+              >
+              <a
+                class="nav-item nav-link px-5 h5 primary-colour"
+                href="projects.html"
+                >projects()</a
+              >
+              <a
+                class="nav-item nav-link px-5 h5 primary-colour"
+                href="contact.html"
+                >contact()</a
+              >
+              <a class="nav-item nav-link px-5 h5 primary-colour" href="#"
+                >resume()</a
+              >
+            </div>
+          </div>
+        </nav>
+      </div>
+      <div class="container" style="max-width: 45rem; margin-top: 3rem">
+        <div style="color: lightgrey">
+          <h1 class="my-5" style="padding-top: 5rem">about( )</h1>
+          <span style="font-size: large">
+            hey there! i code and play genshin sometimes - currently studying
+            computer science and actuarial studies at unsw. dabbling and reading
+            into different corners of the internet is something really
+            interesting to me whether it's different languages and tech stacks,
+            personal finance, defi and the web3 space, or any of the plethora of
+            rabbit holes i've explored over time. thanks for taking the time to
+            check out this humble abode and i hope you enjoy your stay ~
+          </span>
         </div>
-        <div class="container" style="max-width:45rem; margin-top:3rem">
-            <span style="color:lightgrey">i cannot see anything in terms of lorem ipsum and supervised
-                learning is
-                learning from an output and trying to predict that output whereas unsupervised learing is just feeding
-                raw data a lot into a system in order to make it see a trend.
-            </span>
-        </div>
-        <p class="secondary-color nametag">
-            alxw
-        </p>
+      </div>
+      <p class="secondary-color nametag">alxw</p>
     </section>
-
-</body>
-
+  </body>
 </html>
