--- a/education.html
+++ b/education.html
@@ -73,18 +73,29 @@
           </div>
         </nav>
       </div>
-      <div class="container" style="max-width: 45rem; margin-top: 3rem">
+      <div class="container" style="max-width: 45rem; margin-top: 1rem">
         <div style="color: lightgrey">
-          <h1 class="my-5" style="padding-top: 5rem">about( )</h1>
-          <span style="font-size: large">
-            hey there! i code and play genshin sometimes - currently studying
-            computer science and actuarial studies at unsw. dabbling and reading
-            into different corners of the internet is something really
-            interesting to me whether it's different languages and tech stacks,
-            personal finance, defi and the web3 space, or any of the plethora of
-            rabbit holes i've explored over time. thanks for taking the time to
-            check out this humble abode and i hope you enjoy your stay ~
-          </span>
+          <h1 class="mb-5" style="text-align: center; padding: 1rem">UNSW</h1>
+          <h5>Computer Science</h5>
+          <ul class="mt-4">
+            <li>COMP1511: Programming Fundamentals</li>
+            <li>COMP1521: Computer Systems Fundamentals</li>
+            <li>COMP1531: Software Engineering Fundamentals</li>
+            <li>COMP2521: Data Structures and Algorithms</li>
+            <li>MATH1081: Discrete Mathematics</li>
+          </ul>
+          <h5 class="mt-4">Actuarial Studies</h5>
+          <ul class="mt-4">
+            <li>ACTL1101: Introduction to Actuarial Studies</li>
+            <li>ACTL2102: Foundations of Actuarial Models</li>
+            <li>ACTL2111: Financial Mathematics for Actuaries</li>
+            <li>ACTL2131: Probability and Mathematical Statistics</li>
+            <li>ACTL3142: Actuarial Data and Analysis</li>
+            <li>MATH1151: Mathematics for Actuarial Studies and Finance 1A</li>
+            <li>MATH1251: Mathematics for Actuarial Studies and Finance 1B</li>
+            <li>COMM1140: Financial Management</li>
+            <li>ECON1101: Microeconomics</li>
+          </ul>
         </div>
       </div>
       <p class="secondary-color nametag">alxw</p>
