--- a/index.html
+++ b/index.html
@@ -51,16 +51,20 @@
                 href="about.html"
                 >about()</a
               >
-              <a class="nav-item nav-link px-5 h5 primary-colour" href="#"
+              <a
+                class="nav-item nav-link px-5 h5 primary-colour"
+                href="https://github.com/alxxw"
                 >projects()</a
               >
               <a
                 class="nav-item nav-link px-5 h5 primary-colour"
-                href="contact.html"
+                href="https://www.linkedin.com/in/yuxuan-wu-6748aa210"
                 >contact()</a
               >
-              <a class="nav-item nav-link px-5 h5 primary-colour" href="#"
-                >resume()</a
+              <a
+                class="nav-item nav-link px-5 h5 primary-colour"
+                href="education.html"
+                >education()</a
               >
             </div>
           </div>
