--- a/education.html
+++ b/education.html
@@ -24,7 +24,7 @@
   </head>
 
   <body>
-    <section class="about-page">
+    <section class="contact-page">
       <div class="container-fluid">
         <nav class="p-4 navbar-expand-lg navbar navbar-dark">
           <a class="navbar-brand pr-3" href="index.html">
