--- a/about.html
+++ b/about.html
@@ -8,7 +8,7 @@
     />
     <meta name="viewport" content="width=device-width,initial-scale=1" />
     <meta name="theme-color" content="#a1a0a0" />
-    <meta name="description" content="Alex Wu Portfolio" />
+    <meta name="description" content="about me" />
     <title>about</title>
     <meta
       name="viewport"
@@ -75,16 +75,51 @@
       </div>
       <div class="container" style="max-width: 45rem; margin-top: 3rem">
         <div style="color: lightgrey">
-          <h1 class="my-5" style="padding-top: 5rem">about( )</h1>
-          <span style="font-size: large">
+          <h1 class="my-5" style="padding-top: 5rem">about()</h1>
+          <span style="font-size: large" class="mb-5 pb-5">
             hey there! i code and play genshin sometimes - currently studying
             computer science and actuarial studies at unsw. dabbling and reading
             into different corners of the internet is something really
             interesting to me whether it's different languages and tech stacks,
             personal finance, defi and the web3 space, or any of the plethora of
             rabbit holes i've explored over time. thanks for taking the time to
-            check out this humble abode and i hope you enjoy your stay ~
+            check out this humble abode and i hope you enjoy your stay ~ <br />
           </span>
+          <div class="api-check secondary-color">
+            <span id="riot"
+              >is the oce lol champion mastery api currently down?</span
+            >
+            <button
+              id="api button"
+              onclick="checkapi()"
+              type="button"
+              class="btn btn-info btn-sm"
+              data-toggle="button"
+              aria-pressed="false"
+              autocomplete="off"
+            >
+              let's find out!
+            </button>
+          </div>
+          <script type="text/javascript">
+            const checkapi = async () => {
+              document.getElementById("riot").innerHTML = "checking...";
+              try {
+                const response = await fetch(
+                  "https://oc1.api.riotgames.com/lol/champion-mastery/v4/scores/by-summoner/2ENqPUNY_TPniBmhqioOcoqFnB3GF22i8PGoH1gf-3yNQw?api_key=RGAPI-75b67a8e-6e4b-44eb-8524-732d7275d624"
+                );
+                document.getElementById("riot").innerHTML =
+                  "wait it's actually up for once";
+                document.getElementById("api button").innerHTML =
+                  "wow that's crazy";
+              } catch (err) {
+                document.getElementById("api button").innerHTML =
+                  "pray it works this time";
+                document.getElementById("riot").innerHTML =
+                  "of course it's down.";
+              }
+            };
+          </script>
         </div>
       </div>
       <p class="secondary-color nametag">alxw</p>
