--- a/contact.html
+++ b/contact.html
@@ -3,8 +3,7 @@
 
 <head>
     <meta charset="utf-8" />
-    <link rel="icon"
-        href="https://lh3.googleusercontent.com/_ywppJTMLJUzuDCEAIX2kWBAN9FAvAyzKIOwJWzRXhLfWeY7rj8KIA_0YR6Gg48EWN_JpnP58N05fy0vzvGW_dpuh9_xePi2MSOlqw=w600" />
+    <link rel="icon" href="dp.gif" />
     <meta name="viewport" content="width=device-width,initial-scale=1" />
     <meta name="theme-color" content="#a1a0a0" />
     <meta name="description" content="Alex Wu Portfolio" />
@@ -20,8 +19,7 @@
         <div class="container-fluid">
             <nav class="p-4 navbar-expand-lg navbar navbar-dark">
                 <a class="navbar-brand pr-3" href="index.html">
-                    <img src="https://lh3.googleusercontent.com/_ywppJTMLJUzuDCEAIX2kWBAN9FAvAyzKIOwJWzRXhLfWeY7rj8KIA_0YR6Gg48EWN_JpnP58N05fy0vzvGW_dpuh9_xePi2MSOlqw=w600"
-                        width="80" height="80" class="d-inline-block align-top ml-3 rounded" alt="pfp">
+                    <img src="dp.gif" width="80" height="80" class="d-inline-block align-top ml-3 rounded" alt="pfp">
                 </a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
                     aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
