--- a/about.html
+++ b/about.html
@@ -1,110 +1,66 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <script src="scripts.js"></script>
-    <link
-      rel="icon"
-      href="https://lh3.googleusercontent.com/_ywppJTMLJUzuDCEAIX2kWBAN9FAvAyzKIOwJWzRXhLfWeY7rj8KIA_0YR6Gg48EWN_JpnP58N05fy0vzvGW_dpuh9_xePi2MSOlqw=w600"
-    />
-    <meta name="viewport" content="width=device-width,initial-scale=1" />
-    <meta name="theme-color" content="#a1a0a0" />
-    <meta name="description" content="about me" />
-    <title>about</title>
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1, shrink-to-fit=no"
-    />
-    <link
-      rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css"
-      integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
-      crossorigin="anonymous"
-    />
-    <link rel="stylesheet" href="styles.css" />
-  </head>
 
-  <body>
-    <section class="about-page">
-      <div class="container-fluid">
-        <nav class="p-4 navbar-expand-lg navbar navbar-dark">
-          <a class="navbar-brand pr-3" href="index.html">
-            <img
-              src="https://lh3.googleusercontent.com/_ywppJTMLJUzuDCEAIX2kWBAN9FAvAyzKIOwJWzRXhLfWeY7rj8KIA_0YR6Gg48EWN_JpnP58N05fy0vzvGW_dpuh9_xePi2MSOlqw=w600"
-              width="80"
-              height="80"
-              class="d-inline-block align-top ml-3 rounded"
-              alt="pfp"
-            />
-          </a>
-          <button
-            class="navbar-toggler"
-            type="button"
-            data-toggle="collapse"
-            data-target="#navbarNavAltMarkup"
-            aria-controls="navbarNavAltMarkup"
-            aria-expanded="false"
-            aria-label="Toggle navigation"
-          >
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-            <div class="navbar-nav">
-              <a
-                class="nav-item nav-link px-5 h5 primary-colour"
-                href="about.html"
-                >about()</a
-              >
-              <a
-                class="nav-item nav-link px-5 h5 primary-colour"
-                href="https://github.com/alxxw"
-                >projects()</a
-              >
-              <a
-                class="nav-item nav-link px-5 h5 primary-colour"
-                href="https://www.linkedin.com/in/yuxuan-wu-6748aa210"
-                >contact()</a
-              >
-              <a
-                class="nav-item nav-link px-5 h5 primary-colour"
-                href="education.html"
-                >education()</a
-              >
-            </div>
-          </div>
-        </nav>
-      </div>
-      <div class="container" style="max-width: 45rem; margin-top: 3rem">
-        <div style="color: lightgrey">
-          <h1 class="my-5" style="padding-top: 5rem">about()</h1>
-          <span style="font-size: large" class="mb-5 pb-5">
-            hey there! i code and play genshin sometimes - currently studying
-            computer science and actuarial studies at unsw. dabbling and reading
-            into different corners of the internet is something really
-            interesting to me whether it's different languages and tech stacks,
-            personal finance, defi and the web3 space, or any of the plethora of
-            rabbit holes i've explored over time. thanks for taking the time to
-            check out this humble abode and i hope you enjoy your stay ~ <br />
-          </span>
-          <div class="api-check secondary-color">
-            <span id="riot"
-              >is the oce lol champion mastery api currently down?</span
-            >
-            <button
-              id="api button"
-              onclick="checkapi()"
-              type="button"
-              class="btn btn-info btn-sm"
-              data-toggle="button"
-              aria-pressed="false"
-              autocomplete="off"
-            >
-              let's find out!
-            </button>
+<head>
+  <meta charset="utf-8" />
+  <script src="scripts.js"></script>
+  <link rel="icon" href="dp.gif" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <meta name="theme-color" content="#a1a0a0" />
+  <meta name="description" content="about me" />
+  <title>about</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css"
+    integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous" />
+  <link rel="stylesheet" href="styles.css" />
+</head>
+
+<body>
+  <section class="about-page">
+    <div class="container-fluid">
+      <nav class="px-4 pt-4 navbar-expand-lg navbar navbar-dark">
+        <a class="navbar-brand pr-3" href="index.html">
+          <img src="dp.gif" width="80" height="80" class="d-inline-block align-top ml-3 rounded" alt="pfp" />
+        </a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
+          aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+          <div class="navbar-nav">
+            <a class="nav-item nav-link px-5 h5 primary-colour" href="about.html">about()</a>
+            <a class="nav-item nav-link px-5 h5 primary-colour" href="https://github.com/alxxw">projects()</a>
+            <a class="nav-item nav-link px-5 h5 primary-colour"
+              href="https://www.linkedin.com/in/yuxuan-wu-6748aa210">contact()</a>
+            <a class="nav-item nav-link px-5 h5 primary-colour" href="education.html">unsw()</a>
+            <a class="nav-item nav-link px-5 h5 primary-colour" href="nus.html">nus()</a>
           </div>
         </div>
+      </nav>
+    </div>
+    <div class="container" style="max-width: 45rem; margin-top: 3rem">
+      <div style="color: lightgrey">
+        <h1 class="my-5" style="padding-top: 3rem">about()</h1>
+        <span style="font-size: large" class="mb-5 pb-5">
+          hey there! i code and play genshin sometimes - currently studying
+          computer science and actuarial studies at unsw. dabbling and reading
+          into different corners of the internet is something really
+          interesting to me whether it's different languages and tech stacks,
+          personal finance, defi, poker, or any of the plethora of
+          rabbit holes i've explored over time. thanks for taking the time to
+          check out this humble abode and i hope you enjoy your stay ~ <br />
+        </span>
+        <div class="api-check secondary-color">
+          <span id="riot">is the oce lol champion mastery api currently down?</span>
+          <button id="api button" onclick="checkapi()" type="button" class="btn btn-info btn-sm" data-toggle="button"
+            aria-pressed="false" autocomplete="off">
+            let's find out!
+          </button>
+        </div>
       </div>
-      <p class="secondary-color nametag">alxw</p>
-    </section>
-  </body>
+    </div>
+    <p class="secondary-color nametag">alxw</p>
+  </section>
+</body>
+
 </html>
