--- a/education.html
+++ b/education.html
@@ -1,104 +1,73 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <link
-      rel="icon"
-      href="https://lh3.googleusercontent.com/_ywppJTMLJUzuDCEAIX2kWBAN9FAvAyzKIOwJWzRXhLfWeY7rj8KIA_0YR6Gg48EWN_JpnP58N05fy0vzvGW_dpuh9_xePi2MSOlqw=w600"
-    />
-    <meta name="viewport" content="width=device-width,initial-scale=1" />
-    <meta name="theme-color" content="#a1a0a0" />
-    <meta name="description" content="Alex Wu Portfolio" />
-    <title>about</title>
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1, shrink-to-fit=no"
-    />
-    <link
-      rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css"
-      integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
-      crossorigin="anonymous"
-    />
-    <link rel="stylesheet" href="styles.css" />
-  </head>
 
-  <body>
-    <section class="contact-page">
-      <div class="container-fluid">
-        <nav class="p-4 navbar-expand-lg navbar navbar-dark">
-          <a class="navbar-brand pr-3" href="index.html">
-            <img
-              src="https://lh3.googleusercontent.com/_ywppJTMLJUzuDCEAIX2kWBAN9FAvAyzKIOwJWzRXhLfWeY7rj8KIA_0YR6Gg48EWN_JpnP58N05fy0vzvGW_dpuh9_xePi2MSOlqw=w600"
-              width="80"
-              height="80"
-              class="d-inline-block align-top ml-3 rounded"
-              alt="pfp"
-            />
-          </a>
-          <button
-            class="navbar-toggler"
-            type="button"
-            data-toggle="collapse"
-            data-target="#navbarNavAltMarkup"
-            aria-controls="navbarNavAltMarkup"
-            aria-expanded="false"
-            aria-label="Toggle navigation"
-          >
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-            <div class="navbar-nav">
-              <a
-                class="nav-item nav-link px-5 h5 primary-colour"
-                href="about.html"
-                >about()</a
-              >
-              <a
-                class="nav-item nav-link px-5 h5 primary-colour"
-                href="https://github.com/alxxw"
-                >projects()</a
-              >
-              <a
-                class="nav-item nav-link px-5 h5 primary-colour"
-                href="https://www.linkedin.com/in/yuxuan-wu-6748aa210"
-                >contact()</a
-              >
-              <a
-                class="nav-item nav-link px-5 h5 primary-colour"
-                href="education.html"
-                >education()</a
-              >
-            </div>
+<head>
+  <meta charset="utf-8" />
+  <link rel="icon" href="dp.gif" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <meta name="theme-color" content="#a1a0a0" />
+  <meta name="description" content="Alex Wu Portfolio" />
+  <title>about</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css"
+    integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous" />
+  <link rel="stylesheet" href="styles.css" />
+</head>
+
+<body>
+  <section class="contact-page">
+    <div class="container-fluid">
+      <nav class="pt-4 pl-4 pr-4 navbar-expand-lg navbar navbar-dark">
+        <a class="navbar-brand pr-3" href="index.html">
+          <img src="dp.gif" width="80" height="80" class="d-inline-block align-top ml-3 rounded" alt="pfp" />
+        </a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
+          aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+          <div class="navbar-nav">
+            <a class="nav-item nav-link px-5 h5 primary-colour" href="about.html">about()</a>
+            <a class="nav-item nav-link px-5 h5 primary-colour" href="https://github.com/alxxw">projects()</a>
+            <a class="nav-item nav-link px-5 h5 primary-colour"
+              href="https://www.linkedin.com/in/yuxuan-wu-6748aa210">contact()</a>
+            <a class="nav-item nav-link px-5 h5 primary-colour" href="education.html">unsw()</a>
+            <a class="nav-item nav-link px-5 h5 primary-colour" href="nus.html">nus()</a>
           </div>
-        </nav>
-      </div>
-      <div class="container" style="max-width: 45rem; margin-top: 1rem">
-        <div style="color: lightgrey">
-          <h1 class="mb-5" style="text-align: center; padding: 1rem">UNSW</h1>
-          <h5>Computer Science</h5>
-          <ul class="mt-4">
-            <li>COMP1511: Programming Fundamentals</li>
-            <li>COMP1521: Computer Systems Fundamentals</li>
-            <li>COMP1531: Software Engineering Fundamentals</li>
-            <li>COMP2521: Data Structures and Algorithms</li>
-            <li>MATH1081: Discrete Mathematics</li>
-          </ul>
-          <h5 class="mt-4">Actuarial Studies</h5>
-          <ul class="mt-4">
-            <li>ACTL1101: Introduction to Actuarial Studies</li>
-            <li>ACTL2102: Foundations of Actuarial Models</li>
-            <li>ACTL2111: Financial Mathematics for Actuaries</li>
-            <li>ACTL2131: Probability and Mathematical Statistics</li>
-            <li>ACTL3142: Actuarial Data and Analysis</li>
-            <li>MATH1151: Mathematics for Actuarial Studies and Finance 1A</li>
-            <li>MATH1251: Mathematics for Actuarial Studies and Finance 1B</li>
-            <li>COMM1140: Financial Management</li>
-            <li>ECON1101: Microeconomics</li>
-          </ul>
         </div>
+      </nav>
+    </div>
+    <div class="container" style="max-width: 45rem; margin-top: 1rem">
+      <div style="color: lightgrey">
+        <h5>Computer Science</h5>
+        <ul class="mt-2">
+          <li>COMP1511: Programming Fundamentals</li>
+          <li>COMP1521: Computer Systems Fundamentals</li>
+          <li>COMP1531: Software Engineering Fundamentals</li>
+          <li>COMP2521: Data Structures and Algorithms</li>
+          <li>MATH1081: Discrete Mathematics</li>
+          <li>COMP2511: O-O Design & Programming</li>
+          <li>COMP3121: Algorithms & Programming Tech</li>
+          <li>COMP3331: Computer Networks</li>
+          <li>COMP6771: Advanced C++ Programming</li>
+
+        </ul>
+        <h5 class="mt-2">Actuarial Studies</h5>
+        <ul class="mt-2">
+          <li>ACTL1101: Introduction to Actuarial Studies</li>
+          <li>ACTL2102: Foundations of Actuarial Models</li>
+          <li>ACTL2111: Financial Mathematics for Actuaries</li>
+          <li>ACTL2131: Probability and Mathematical Statistics</li>
+          <li>ACTL3142: Actuarial Data and Analysis</li>
+          <li>MATH1151: Mathematics for Actuarial Studies and Finance 1A</li>
+          <li>MATH1251: Mathematics for Actuarial Studies and Finance 1B</li>
+          <li>COMM1140: Financial Management</li>
+          <li>ECON1101: Microeconomics</li>
+        </ul>
       </div>
-      <p class="secondary-color nametag">alxw</p>
-    </section>
-  </body>
+    </div>
+    <p class="secondary-color nametag">alxw</p>
+  </section>
+</body>
+
 </html>
