--- a/nus.html
+++ b/nus.html
@@ -40,8 +40,17 @@
         </div>
         <div class="container" style="max-width: 45rem; margin-top: 1rem">
             <div style="color: lightgrey">
-                I spent a semester at the end of 2023 on exchange at the National University of Singapore -
-                <h5>Computer Science</h5>
+                <h1 class="mb-5" style="padding-top: 1rem">a short hiatus from the rhythm of unsw life</h1>
+                <span style="font-size: large" class="mb-5 pb-5">
+                    I spent a semester at the end of 2023 on exchange at the National University of Singapore, where I
+                    studied various interesting subjects on different areas within computer science, travelled around
+                    the
+                    south east asia region, and found new friends within the common living spaces I was assigned to.
+                    There is
+                    the small culture shock and large weather dichotomy, but that proved to not be too much of a
+                    hinderance - the human body can adapt to consistent high heat surprisingly well.
+                </span>
+                <h5 class="mt-5">Computer Science</h5>
                 <ul class="mt-2">
                     <li>CS2107: Information Security</li>
                     <li>CS3210: Parallel Computing</li>
