--- a/nus.html
+++ b/nus.html
@@ -48,7 +48,8 @@
                     south east asia region, and found new friends within the common living spaces I was assigned to.
                     There is
                     the small culture shock and large weather dichotomy, but that proved to not be too much of a
-                    hinderance - the human body can adapt to consistent high heat surprisingly well.
+                    hinderance - the human body can adapt to consistent high heat surprisingly well. A new colombo
+                    mobility grant scholarship was also a nice bonus.
                 </span>
                 <h5 class="mt-5">Computer Science</h5>
                 <ul class="mt-2">
