--- a/nus.html
+++ b/nus.html
@@ -45,7 +45,8 @@
                     I spent a semester at the end of 2023 on exchange at the National University of Singapore, where I
                     studied various interesting subjects on different areas within computer science, travelled around
                     the
-                    south east asia region, and found new friends within the common living spaces I was assigned to.
+                    south east asia region, and found new friends within Residential College 4, my home for a short 4
+                    months.
                     There is
                     the small culture shock and large weather dichotomy, but that proved to not be too much of a
                     hinderance - the human body can adapt to consistent high heat surprisingly well. A new colombo
