--- a/about.html
+++ b/about.html
@@ -42,8 +42,9 @@
       <div style="color: lightgrey">
         <h1 class="my-5" style="padding-top: 3rem">about()</h1>
         <span style="font-size: large" class="mb-5 pb-5">
-          hey there! i code and play genshin sometimes - currently studying
-          computer science and actuarial studies at unsw. dabbling and reading
+          hey there! i code and game sometimes - currently studying
+          computer science and actuarial studies at unsw, formerly interned for deloitte as a cloud engineer. dabbling
+          and reading
           into different corners of the internet is something really
           interesting to me whether it's different languages and tech stacks,
           personal finance, defi, poker, or any of the plethora of
